[project]
requires-python = ">=3.7"

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel",
    "Cython>=0.22",
    # see: https://github.com/scipy/oldest-supported-numpy/blob/master/setup.cfg
    "oldest-supported-numpy"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "bcolz/version.py"g
version_scheme = 'guess-next-dev'
local_scheme = 'dirty-tag'
