[project]
requires-python = ">=3.7"

[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel",
    "Cython>=0.22",
    # see: https://github.com/scipy/oldest-supported-numpy/blob/master/setup.cfg
    "oldest-supported-numpy"
]

# uncomment to enable pep517 after versioneer problem is fixed.
# https://github.com/python-versioneer/python-versioneer/issues/193
# build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "bcolz/version.py"
version_scheme = 'guess-next-dev'
local_scheme = 'dirty-tag'
