[metadata]
name = bcolz-zipline
description='Columnar and compressed data containers.',
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
],
author='Francesc Alted',
author_email='francesc@blosc.org',
maintainer='Francesc Alted',
maintainer_email='francesc@blosc.org',
url='https://github.com/stefan-jansen/bcolz-zipline',
license='BSD',
platforms=['any'],

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[options]
python_requires = >=3.7