[metadata]
name = bcolz-zipline
description = Columnar and compressed data containers.
long_description = file: README.md
long_description_content_type = text/markdown
author = Francesc Alted
author_email = francesc@blosc.org
maintainer = Francesc Alted
maintainer_email = francesc@blosc.org
url = https://github.com/stefan-jansen/bcolz-zipline
classifiers = Development Status :: 5 - Production/Stable
              Intended Audience :: Developers
              Intended Audience :: Information Technology
              Intended Audience :: Science/Research
              License :: OSI Approved :: BSD License
              Programming Language :: Python
              Topic :: Software Development :: Libraries :: Python Modules
              Operating System :: Microsoft :: Windows
              Operating System :: Unix
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.9
license = BSD
platforms = ['any']

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    numpy

[options.extras_require]
optional =
    numexpr>=2.5.2
    dask>=0.9.0
    pandas
    tables

test =
    pytest >=6.2.3
    pytest-cov >=2.11.1
    coveralls==3.0.1

[options.package_data]
bcolz = carray_ext.pxd


[tools:pytest]
testpaths = bcolz/tests
addopts = -v
